# beers_friends

./: .gitignore  LICENSE  README.md  pyproject.toml
beer_friends/: main.py
beer_friends/entities/: beer.py  bill.py  order.py
beer_friends/schemas/: beer_schema.py  order_schema.py
tests/: test_main.py
webapp/: next.config.js  package-lock.json  package.json
webapp/app/: page.tsx
webapp/app/api/beers/: route.ts
webapp/app/api/payments/: route.ts
webapp/app/pay/: page.tsx
