[tool.poetry]
name = "beer_friends"
version = "0.1.0"
description = ""
authors = ["jcaviedesc <jcamilocc97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
